Fix links display make them more visible.

--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -70,3 +70,9 @@ Override bulma .number class for prismjs classes
   max-width: inherit
   min-height: inherit
   min-width: inherit
+
+a
+    &:not([class])
+        color: #028fcc
+        &:hover
+            color: #2d3947
